# gem-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  pyproject.toml  settings.gradle.kts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
adr/: 0001-dev-container-first.md  0002-aso-before-implementation.md  0003-codex-default-claude-headless-optional.md  0004-gem-run-store-in-postgres.md
config/: identity.example.yaml  pipelines.example.yaml  projects.example.yaml  providers.example.yaml
docs/: ARCHITECTURE.md  ASO-FACTORY-INTEGRATION.md  BLUEPRINT.md  CODEX-SLACK-EXECUTOR.md  KNOWLEDGE-INDEXING.md  MACOS-AUTOSTART.md  MEMORY.md  MVP.md  ORCHESTRATION.md  PIPELINES.md  PROVIDER-STRATEGY.md  ROADMAP.md  RUNTIME.md  SLACK.md  STAGE-1-IMPLEMENTATION.md
ops/host-runner/: codex_runner.py
ops/macos/: com.onexeor.gem-os.plist  start-gem-os.sh
ops/prometheus/: prometheus.yml
pipelines/: __init__.py
pipelines/aso_fabric/: __init__.py  cli.py
services/: __init__.py
services/admin/: __init__.py  app.py
services/provider_router/: __init__.py  app.py
services/scheduler/: cli.py
services/slack_bot/: __init__.py  app.py
src/main/kotlin/com/onexeor/gemos/admin/: AdminMain.kt
src/main/kotlin/com/onexeor/gemos/aso/: AsoFabricMain.kt
src/main/resources/db/migration/: V2__create_runs.sql  V3__add_run_parent.sql  V4__create_slack_thread_messages.sql  V5__create_slack_thread_sessions.sql
tests/: test_config.py
(+19 files in other folders)
