[project]
name = "gem-os"
version = "0.1.0"
description = "Portable AI operations system for Slack, providers, pipelines, and admin observability."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.121.0",
    "uvicorn[standard]>=0.32.0,<0.50.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<0.29.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "redis>=5.2.0,<7.0.0",
    "slack-bolt>=1.21.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/gem_core", "services", "pipelines"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
